--- a/front-end/src/components/screens/auth/register.module.scss
+++ b/front-end/src/components/screens/auth/register.module.scss
@@ -4,7 +4,8 @@
 	box-sizing: border-box;
 }
 
-body{
+.body{
+	background: whitesmoke;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -12,48 +13,47 @@ body{
 }
 
 .wrapper{
-	width: 750px;
-	background: #dcdcdc;
+	box-shadow: inset;
+	width: 420px;
+	background: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 	border: 2px solid rgba(255, 255, 255, .2);
 	backdrop-filter: blur(30px);
-	color: grey;
 	border-radius: 10px;
-	padding: 40px 35px 55px;
+	padding: 30px;
+}
+
+.title h1{
+	font-size: 36px;
+	text-align: center;
+	padding-bottom: 30px;
 }
 
 .wrapper h1 {
 	font-size: 36px;
 	text-align: center;
-	margin-bottom: 20px;
 }
 
 .wrapper .input_box {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-}
-
-.input_box .input_field {
 	position: relative;
-	width: 48%;
-	height: 50%;
-	margin: 13px 0;
+	width: 100%;
+	height: 50px;
+	margin: 30px 0;
 }
 
-.input_box .input_field input {
+.input_box input {
 	width: 100%;
 	height: 100%;
 	background: transparent;
 	outline: none;
-	border: 2px solid ;
-	border-radius: 40px;
+	border: 1px solid ;
+	border-radius: 10px;
 	font-size: 16px;
-	color: grey;
 	padding: 20px 45px 20px 20px;
 }
 
 .input_box input::placeholder{
-	color: grey;
+	color: black;
 }
 
 .input_box .icon{
@@ -64,18 +64,43 @@ body{
 	font-size: 16px;
 }
 
+.wrapper .remember_forgot{
+	display: flex;
+	justify-content: space-between;
+	margin: -15px 0 15px;
+	font-size: 14.5px;
+}
+
+.remember_forgot label input {
+	accent-color: black;
+	margin-right: 4px;
+}
+
+.remember_forgot a {
+	color: black;
+	text-decoration: none;
+}
+
+
+.remember_forgot a:hover{
+	text-decoration: underline;
+}
+
 .wrapper button{
 	width: 100%;
 	height: 45px;
-	background: grey;
 	border: none;
 	outline: none;
-	border-radius: 40px;
+	border-radius: 10px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 	cursor: pointer;
 	font-size: 16px;
-	color: #333;
+	color: #fff;
 	font-weight: 700;
+}
+
+.button {
+	background: #2a9df4;
 }
 
 .wrapper .register_link {
@@ -85,7 +110,7 @@ body{
 }
 
 .register_link p a {
-	color: grey;
+	color: black;
 	text-decoration: none;
 	font-weight: 600;
 }
